# plugin-freedom-system

./: .gitignore  CLAUDE.md  PLUGINS.md
.claude/: CLAUDE.md  system-config.json
.claude/aesthetics/: manifest.json
.claude/agents/: dsp-agent.md  foundation-agent.md  gui-agent.md  research-planning-agent.md  shell-agent.md  ui-design-agent.md  ui-finalization-agent.md  validator.md
.claude/commands/: continue.md  destroy.md  doc-fix.md  dream.md  implement.md  improve.md  test.md  (+2 more)
implementation-notes/: gui-optional-flow-COMPLETE.md
plan/: phase-4-plan.md  phase-4-verification.md  phase-5-plan.md
plugins/Spyder2000/: .continue-here.md  CMakeLists.txt
plugins/Spyder2000/.ideas/: architecture.md  creative-brief.md  parameter-spec-draft.md  parameter-spec.md  plan.md
plugins/Spyder2000/.ideas/mockups/: v1-CMakeLists.txt  v1-PluginEditor.cpp  v1-PluginEditor.h  v1-integration-checklist.md  v1-ui-test.html  v1-ui.html  v1-ui.yaml  v2-ui-test.html  v2-ui.yaml  v3-ui-test.html  v3-ui.yaml  v4-ui-test.html  v4-ui.yaml  v5-CMakeLists.txt  v5-PluginEditor.cpp  v5-PluginEditor.h  v5-integration-checklist.md  v5-ui-test.html  v5-ui.html  v5-ui.yaml  v6-ui-test.html  v6-ui.yaml
plugins/Spyder2000/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
prompts/: 001-create-phase-implementation-plan.md  002-refactor-cleanup-to-lifecycle-skill.md  003-fix-outdated-stub-references.md  006-implement-aesthetic-dreaming.md
skills-audit/: troubleshooting-docs-fixes-comparison.md  workflow-reconciliation-fixes.md
templates/: architecture.md
(+51 files in other folders)
